@@ -191,7 +191,7 @@ setMethodS3("segmentByCBS", "default", function(y, chromosome=0L, x=NULL, index=
 
   # Argument 'knownSegments':
   if (is.null(knownSegments)) {
-    knownSegments <- data.frame(chromosome=NA, start=+Inf, end=-Inf, length=+Inf);
+    knownSegments <- data.frame(chromosome=NA, start=+Inf, end=-Inf);
   } else {
 #    if (!joinSegments) {
 #      throw("Argument 'knownSegments' should only be specified if argument 'joinSegments' is TRUE.");
@@ -337,7 +337,7 @@ setMethodS3("segmentByCBS", "default", function(y, chromosome=0L, x=NULL, index=
       if (!is.null(knownSegments)) {
         knownSegmentsKK <- subset(knownSegments, chromosome == chromosomeKK);
         if (nrow(knownSegmentsKK) == 0L) {
-          knownSegmentsKK <- data.frame(chromosome=chromosomeKK, start=-Inf, end=+Inf, length=+Inf);
+          knownSegmentsKK <- data.frame(chromosome=chromosomeKK, start=-Inf, end=+Inf);
         }
         verbose && cat(verbose, "Known segments:");
         verbose && print(verbose, knownSegmentsKK);
@@ -412,7 +412,7 @@ setMethodS3("segmentByCBS", "default", function(y, chromosome=0L, x=NULL, index=
 
   knownSegments <- subset(knownSegments, chromosome == currChromosome);
   if (nrow(knownSegments) == 0L) {
-    knownSegments <- data.frame(chromosome=currChromosome, start=-Inf, end=+Inf, length=+Inf);
+    knownSegments <- data.frame(chromosome=currChromosome, start=-Inf, end=+Inf);
   }
   nbrOfSegments <- nrow(knownSegments);
 
